apps/base/redirects/home-assistant/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.20.250
    ports:
      - port: 8123
        protocol: TCP
