apps/base/redirects/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: redirects
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
  sessionAffinity: None
  type: ClusterIP
