apps/base/redirects/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400,401,403,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505"
  name: home-assistant
  namespace: redirects
spec:
  ingressClassName: nginx-public
  rules:
    - host: assistant.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - assistant.christensencloud.us
      secretName: assistant-christensencloud.us-tls
